cap 4 not finish

--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,106 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-12 17:52:07 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-13 13:04:54 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{bluebook,
+	Author = {M. Fingeroff},
+	Date-Added = {2015-11-13 11:57:33 +0000},
+	Date-Modified = {2015-11-13 11:57:59 +0000},
+	Publisher = {Xlibris Corporation},
+	Title = {High-Level Synthesis Blue Book},
+	Year = {2010}}
+
+@article{31004,
+	Author = {Andria, G. and Savino, M. and Trotta, Amerigo},
+	Date-Added = {2015-11-13 11:45:36 +0000},
+	Date-Modified = {2015-11-13 11:45:36 +0000},
+	Doi = {10.1109/19.31004},
+	Issn = {0018-9456},
+	Journal = {Instrumentation and Measurement, IEEE Transactions on},
+	Keywords = {computerised signal processing;fast Fourier transforms;frequency measurement;harmonic analysis;interpolation;phase measurement;power engineering computing;power system measurement;spectral analysis;FFT;amplitude;computerised signal processing;distorted signal;electrical measurement accuracy;filtering;frequency;harmonic;interharmonic components;interpolation algorithms;nonsinusoidal signal analysis;phase;power system measurement;sampling process;simulated signals;spectral leakage;weighting functions;windows;Current measurement;Distortion measurement;Electric variables measurement;Frequency synchronization;Harmonic distortion;Interpolation;Power harmonic filters;Power system analysis computing;Power system harmonics;Signal sampling},
+	Month = {Aug},
+	Number = {4},
+	Pages = {856-863},
+	Title = {Windows and interpolation algorithms to improve electrical measurement accuracy},
+	Volume = {38},
+	Year = {1989},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/19.31004}}
+
+@article{eetimes,
+	Author = {Michael Meredith},
+	Date-Added = {2015-11-13 10:19:47 +0000},
+	Date-Modified = {2015-11-13 10:20:25 +0000},
+	Journal = {EETimes},
+	Title = {A look inside behavioral synthesis},
+	Year = {2004}}
+
+@book{Coussy:2008:HSA:1457713,
+	Author = {Coussy, Philippe and Morawiec, Adam},
+	Date-Added = {2015-11-13 10:19:21 +0000},
+	Date-Modified = {2015-11-13 10:19:21 +0000},
+	Edition = {1st},
+	Isbn = {1402085877, 9781402085871},
+	Publisher = {Springer Publishing Company, Incorporated},
+	Title = {High-Level Synthesis: From Algorithm to Digital Circuit},
+	Year = {2008}}
+
+@inproceedings{545676,
+	Author = {Smith, D.J.},
+	Booktitle = {Design Automation Conference Proceedings 1996, 33rd},
+	Date-Added = {2015-11-13 10:12:25 +0000},
+	Date-Modified = {2015-11-13 10:12:25 +0000},
+	Doi = {10.1109/DAC.1996.545676},
+	Issn = {0738-100X},
+	Keywords = {hardware description languages;integrated circuit design;logic CAD;C;RTL;VHDL;Verilog;algorithmic level;greatest common divisor;Application specific integrated circuits;Business;Design automation;Electronic design automation and methodology;Field programmable gate arrays;Hardware design languages;Libraries;Permission;USA Councils},
+	Month = {Jun},
+	Pages = {771-776},
+	Title = {VHDL and Verilog compared and contrasted-plus modeled example written in VHDL, Verilog and C},
+	Year = {1996},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/DAC.1996.545676}}
+
+@url{sitevxworks,
+	Date-Added = {2015-11-13 09:52:39 +0000},
+	Date-Modified = {2015-11-13 09:54:04 +0000},
+	Keywords = {http://windriver.com/products/vxworks/},
+	Title = {http://windriver.com/products/vxworks/}}
+
+@book{fornacia,
+	Author = {W. Fornaciari and C. Brandolese},
+	Date-Added = {2015-11-13 09:45:57 +0000},
+	Date-Modified = {2015-11-13 09:46:34 +0000},
+	Publisher = {Pearson Italia},
+	Title = {Sistemi embedded. Sviluppo hardware e software per sistemi dedicati},
+	Year = {2007}}
+
+@article{259423,
+	Author = {Shin, K.G. and Ramanathan, P.},
+	Date-Added = {2015-11-13 09:44:20 +0000},
+	Date-Modified = {2015-11-13 09:44:20 +0000},
+	Doi = {10.1109/5.259423},
+	Issn = {0018-9219},
+	Journal = {Proceedings of the IEEE},
+	Keywords = {computer architecture;fault tolerant computing;local area networks;multiprocessing systems;operating systems (computers);real-time systems;redundancy;reviews;scheduling;synchronisation;LAN;clock synchronisation;fault tolerance;real-time OS;real-time computing;redundancy management;scheduling;Application software;Automobiles;Computer displays;Computer science;Environmental economics;Humans;Processor scheduling;Real time systems;Resource management;Wheels},
+	Month = {Jan},
+	Number = {1},
+	Pages = {6-24},
+	Title = {Real-time computing: a new discipline of computer science and engineering},
+	Volume = {82},
+	Year = {1994},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/5.259423}}
+
+@book{kopetzrt,
+	Author = {H. Kopetz},
+	Date-Added = {2015-11-13 09:40:35 +0000},
+	Date-Modified = {2015-11-13 09:41:12 +0000},
+	Publisher = {Kluwer Academic Publishers},
+	Title = {Real-time Systems: Design Principles for Distributed Embedded Applications},
+	Year = {1997}}
 
 @manual{e300manual,
 	Author = {Freescale semiconductor},
@@ -228,7 +322,8 @@
 	Date-Added = {2015-11-12 11:11:22 +0000},
 	Date-Modified = {2015-11-12 13:54:40 +0000},
 	Title = {http://www.ti.com/lit/ds/symlink/dac902.pdf},
-	Url = {http://www.ti.com/lit/ds/symlink/dac902.pdf}}
+	Url = {http://www.ti.com/lit/ds/symlink/dac902.pdf},
+	Bdsk-Url-1 = {http://www.ti.com/lit/ds/symlink/dac902.pdf}}
 
 @mastersthesis{thesissmldis,
 	Author = {S. Disegna},
