--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -12,6 +12,14 @@
 \usepackage{siunitx}
 \usepackage{gensymb}
 \DeclareSIUnit{\EUR}{\text{\euro}}
+
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+
+\makeatletter
+\def\BState{\State\hskip-\ALG@thistlm}
+\makeatother
+
 \hyphenation{a-gen-tiz-za-zio-ne}
 
 \setlength{\paperwidth}{16cm}
